Build on JDK 18